@@ -1,6 +1,8 @@
 * 2014-08-01 - thorben.betten@open-xchange.com
 
  - Fix for bug 33857: Do not log a warning in case Content-Type misses any charset information; just detect it and continue
+ - Fix for bug 33715: Accept new parameter "attach_src" for action=get request to let the client signal RFC822 source is supposed to be
+                      attached to generated JSON mail representation
 
 * 2014-07-31 - thorben.betten@open-xchange.com
 
